fix: remove trailing comma in Czech translation JSON

--- a/public/locales/cs/translation.json
+++ b/public/locales/cs/translation.json
@@ -18,5 +18,5 @@
     "Notifications": "Oznámení",
     "NoNotificationsAtTheMoment": "Žádná oznámení v tuto chvíli"
   },
-  "Homepage": "Domovská stránka",
+  "Homepage": "Domovská stránka"
 }
