upd: update translations and improve error handling in Router components

--- a/public/locales/cs/translation.json
+++ b/public/locales/cs/translation.json
@@ -7,16 +7,12 @@
     "Light": "Světlý",
     "Dark": "Tmavý",
     "System": "Systém",
-    "Home": "Domů",
+    "Homepage": "Domovská stránka",
+    "ThisPageCouldNotBeFound": "Tato stránka nebyla nalezena.",
     "Settings": "Nastavení",
-    "Version": "Verze",
     "Unauthorized": "Neoprávněný",
     "Development": "Testovací",
     "DevelopmentDialogTitle": "Testovací prostředí",
-    "DevelopmentDialogContent": "Nacházíte se v testovacím prostředí. Integrita dat není zaručena a chování aplikace může být nepředvídatelné. Prosím, buďte opatrní a jakékoli neočekávané chování ihned hláste vývojovému týmu.",
-    "AddRow": "Přidat řádek",
-    "Notifications": "Oznámení",
-    "NoNotificationsAtTheMoment": "Žádná oznámení v tuto chvíli"
-  },
-  "Homepage": "Domovská stránka"
+    "DevelopmentDialogContent": "Nacházíte se v testovacím prostředí. Integrita dat není zaručena a chování aplikace může být nepředvídatelné. Prosím, buďte opatrní a jakékoli neočekávané chování ihned hláste vývojovému týmu."
+  }
 }
